Fix: List doesn't scroll if window is too small

--- a/src/components/popout/_group_dm.scss
+++ b/src/components/popout/_group_dm.scss
@@ -56,7 +56,7 @@
 
     // User list
     .scroller-2FKFPG{
-        max-height: unset;
+        max-height: calc(100vh - 30px - 48px - 185px - 72px); // Viewport - titlebar - toolbar - popout header - footer
     }
     .friendWrapper-LdKLp8{
         .friend-2E0q2S{
